--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-request-id": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
