--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.8.3",
     "nodemon": "^3.1.7",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "winston-mongodb": "^6.0.0"
   }
 }
